# empty_bot

./: .env.example  .gitignore  README.md  __main__.py  pyproject.toml
config_data/: config.py
keyboards/: bot_main_menu.py
lexicon/: lexicon_ru.py
