[tool.poetry]
name = "tgbot-project"
version = "0.1.0"
description = ""
authors = ["emptyTuple <kotorov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.14.0"
requests = "^2.32.3"
environs = "^11.0.0"
pylint = "^3.3.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
